test/should-fail/vsgc1630sub.f3
/**
 * @subtest
 */

package class vsgc1630sub {
  var x = 2;
}
